# pore_gns

./: .flake8  .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md
pore_net/: CNN.py  GNS.py  dataset.py  minks.py  unet.py  utils.py
pore_net/fno/: model.py  train.py
pore_net/triplane/: build_cloud_point.py  dataset.py  dice_scores_triplane.csv  model.py  train.py  train_decoder.py  train_decoder_refine.py  train_triplane.py  vis_bench_072.ipynb  vis_bench_073.ipynb
pore_net/unet_recon/: README.md  bench.py  dataset.py  train.py
pore_net/vecset/: bench.ipynb  bench_dice.py  build_ae_dataset.py  dataset.py  misc.py  model.py  train.py  train_util.py  vis_cmp.py
script/: calc_stat.py  inference_GNS.py  inference_GNS_Unet.py  inference_GNS_Unet_noreg.py  interpolate_tif.py  pre_compute_phy_info.py  pre_compute_vel.py  pre_downsample.py  pre_downsample_rock.py  train_GNS.py  train_unet.py  vis_res_cmp.py  vis_res_cmp_crop.py
