
[build-system]
requires = ["setuptools"]

[project]
name = "pore_net"
version = "0.1"

authors = [
  {name = "Chunyang Wang, Yuxuan Gu, Gege Wen"},
]
description="Learnig Pore-scale physics in the way of ML"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Deeplearning", "ML4Pore", "pore_net"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[tool.setuptools]
packages = ["pore_net"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # Isort
]
ignore = [
  "E501",  # line too long
  "E402",  # module level import not at top of file
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
  "I001",  # import block is unsorted or unformatted
  "E731",  # do not use labmda
]
